--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "paper-toast": "PolymerElements/paper-toast#^1.3.0",
     "neon-animation": "PolymerElements/neon-animation#^1.2.4",
     "marked-element": "PolymerElements/marked-element#^1.2.0",
-    "paper-dialog": "PolymerElements/paper-dialog#^1.1.0"
+    "paper-dialog": "PolymerElements/paper-dialog#^1.1.0",
+    "app-storage": "PolymerElements/app-storage#^0.9.7"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.1.7",
