--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,10 @@
     "neon-animation": "PolymerElements/neon-animation#^1.2.4",
     "marked-element": "PolymerElements/marked-element#^1.2.0",
     "paper-dialog": "PolymerElements/paper-dialog#^1.1.0",
-    "app-storage": "PolymerElements/app-storage#^0.9.7"
+    "app-storage": "PolymerElements/app-storage#^0.9.7",
+    "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^1.4.1",
+    "paper-listbox": "PolymerElements/paper-listbox#^1.1.2",
+    "paper-item": "PolymerElements/paper-item#^1.2.1"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.1.7",
